feat: integrate and store blog summaries to Supabase

--- a/assignment-2/package.json
+++ b/assignment-2/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "shadcn": "^2.7.0",
     "@mozilla/readability": "^0.6.0",
+    "@supabase/supabase-js": "^2.50.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.0.1",
