--- a/assignment-2/package.json
+++ b/assignment-2/package.json
@@ -9,31 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.50.3",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.0",
-    "lucide-react": "^0.525.0",
-    "mongoose": "^8.16.1",
-    "next": "15.3.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "shadcn": "^2.7.0",
-    "@mozilla/readability": "^0.6.0",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/supabase-js": "^2.50.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "dotenv": "^17.0.1",
+    "framer-motion": "^12.23.0",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "next": "15.3.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "shadcn": "^2.7.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
